# domain-specific-llm-eval

./: .dockerignore  .env.compose  .env.example  .env.mirror.example  .env.prebuilt.example  .gitignore  .gitleaks.toml  .gitmodules  CUSTOM_DOCUMENTS_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.test  ENGINEERING_JOURNAL.md  IMPLEMENTATION_COMPLETE.md  INFRASTRUCTURE.md  LIMITATIONS_PROGRESS_20260313.md  LIMITATIONS_PROGRESS_20260314.md  LIMITATIONS_PROGRESS_20260314B.md  LIMITATIONS_PROGRESS_20260314C.md  LIMITATIONS_PROGRESS_20260317.md  MLOPS_GUIDE.md  Makefile  NEXT_STEPS_PRIORITY.md  NEXT_STEPS_PRIORITY_V10.md  NEXT_STEPS_PRIORITY_V11.md  NEXT_STEPS_PRIORITY_V12.md  NEXT_STEPS_PRIORITY_V13.md  NEXT_STEPS_PRIORITY_V14.md  NEXT_STEPS_PRIORITY_V2.md  NEXT_STEPS_PRIORITY_V3.md  NEXT_STEPS_PRIORITY_V4.md  NEXT_STEPS_PRIORITY_V5.md  NEXT_STEPS_PRIORITY_V6.md  NEXT_STEPS_PRIORITY_V7.md  NEXT_STEPS_PRIORITY_V8.md  NEXT_STEPS_PRIORITY_V9.md  README.md  README_CONFIGURABLE.md  RELEASE_NOTES_v1.0.0.md  ROADMAP_COMPLETION_AUDIT.md  (+34 more)
services/: __init__.py  pyproject.toml
services/adapter/: km_export.py  main.py  normalize.py  openapi.json
services/common/: __init__.py  auth.py  config.py  errors.py  events.py  logging.py  metrics.py  middleware.py  plugin_events.py  plugin_loader.py  plugin_sandbox.py  ratelimit.py  redact.py
services/eval/: README.md  aggregation_metrics.py  backpressure.py  context_capture.py  execution.py  kpi_writer.py  main.py  manifest.py  metrics.py  openapi.json  persistence_metrics.py  persistence_pipeline.py  rag_interface.py  repository.py  (+7 more)
(+702 files in other folders)
