[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-services"
version = "0.1.0"
description = "Microservice scaffolding for the domain-specific RAG evaluation platform"
authors = [{name = "Platform Engineering", email = "platform@example.com"}]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "prometheus-client>=0.17,<0.20",
]
license = {text = "Apache-2.0"}

[project.optional-dependencies]
test = [
    "pytest>=7.4,<9.0",
    "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    'ignore:Please use `import python_multipart` instead\.:PendingDeprecationWarning:starlette\.formparsers',
]

